pulse2-davos-client (0.51.0-0.20220118.jammy.1)  stable; urgency=low

   * New jammy snapshot

 -- Nicolas Lécureuil <nicolas.lecureuil@siveo.net> Fri, 21 Sep 2018 00:59:02 +0100

pulse2-davos-client (0.50.0-0.20210525.groovy.2)  stable; urgency=low

   * New groovy snapshot

 -- Nicolas Lécureuil <nicolas.lecureuil@siveo.net> Fri, 21 Sep 2018 00:59:02 +0100

pulse2-davos-client (0.50.0-0.20210525.groovy.1)  stable; urgency=low

   * New groovy snapshot

 -- Nicolas Lécureuil <nicolas.lecureuil@siveo.net> Fri, 21 Sep 2018 00:59:02 +0100

pulse2-davos-client (0.50.0-0.20210107.groovy.3)  stable; urgency=low

   * Fix davos python2 shebang

 -- Nicolas Lécureuil <nicolas.lecureuil@siveo.net> Fri, 21 Sep 2018 00:59:02 +0100
 
pulse2-davos-client (0.50.0-0.20210107.groovy.2)  stable; urgency=low

   * Fix linux-firmware install

 -- Nicolas Lécureuil <nicolas.lecureuil@siveo.net> Fri, 21 Sep 2018 00:59:02 +0100
 
pulse2-davos-client (0.50.0-0.20210107.groovy.1)  stable; urgency=low

   * Simple test with groovy, with old partclone

 -- Nicolas Lécureuil <nicolas.lecureuil@siveo.net> Fri, 21 Sep 2018 00:59:02 +0100

pulse2-davos-client (0.49.31)  stable; urgency=low

   * Test automatic build on the BuildSystem

 -- Nicolas Lécureuil <nicolas.lecureuil@siveo.net> Fri, 21 Sep 2018 00:59:02 +0100

pulse2-davos-client (0.49.30)  stable; urgency=low

   * exclude more categories from minimal inventory for PXE registration

 -- Nicolas Lécureuil <nicolas.lecureuil@siveo.net> Fri, 21 Sep 2018 00:59:02 +0100

pulse2-davos-client (0.49.29)  stable; urgency=low

   * Fix davos backtrace 

 -- Nicolas Lécureuil <nicolas.lecureuil@siveo.net> Fri, 21 Sep 2018 00:59:02 +0100

pulse2-davos-client (0.49.28)  stable; urgency=low

   * Revert the log level

 -- Nicolas Lécureuil <nicolas.lecureuil@siveo.net> Fri, 21 Sep 2018 00:59:02 +0100

pulse2-davos-client (0.49.27)  stable; urgency=low

   * Fix OS name for newer versions of Fusion and GLPI
